lampstack.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: LAMP stack setup with a custom web page

Parameters:
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
    ConstraintDescription: must be a valid EC2 instance type.

Resources:
  WebServerInstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: ami-08a0d1e16fc3f61ea # Amazon Linux 2 AMI (specific to region)
      KeyName: kkk   #your-key-pair-name
      SecurityGroups:
        - !Ref WebServerSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd mariadb-server php php-mysqlnd
          systemctl start httpd
          systemctl enable httpd
          usermod -a -G apache ec2-user
          chown -R ec2-user-user:apache /var/www
          chmond 2775 /var/wwww
          find /var/www -type d -exec chmod 2775 {} \;
          find /var/www -type d -exec chmod 0664 {} \;
          echo "Sample web from SCALAgos TDD created by juliana and Attendance Number 2" > /var/www/html/index.html
      Tags:
        - Key: Name
          Value: scatdd_juliana_xxx_webserver

  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP access
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0  
      Tags:
        - Key: Name
          Value: scatdd_juliana_xxx_sg

Outputs:
  WebsiteURL:
    Description: URL of the sample website
    Value: !Sub "http://${WebServerInstance.PublicDnsName}"
